# ConsultantLife

./: .gitignore  CMakeLists.txt  main.cpp
CMakeModules/: Allegro-config.cmake  Allegro-targets-debug.cmake  Allegro-targets-release.cmake  Allegro-targets.cmake  DeclareNewSharedLibrary.cmake
core/: Bitmap.cpp  CMakeLists.txt  Game.cpp
core/include/core/: Bitmap.h  Constants.h  Display.h  Event.h  EventQueue.h  EventReceiver.h  EventSender.h  Game.h  InitFailedExc.h  PositionSize.h  SpriteSheet.h  TileMap.h  Timer.h
core/src/: Bitmap.cpp  Display.cpp  Event.cpp  EventQueue.cpp  Game.cpp  SpriteSheet.cpp  SpriteSheetBuilder.cpp  TileMap.cpp  Timer.cpp
model/: CMakeLists.txt  Consultant.cpp
model/include/model/: Consultant.h
resources/: CMakeLists.txt  basic_character.json  pink_consultant.json  sophia_small.json  sophia_small.tmx
tests/: CMakeLists.txt
tests/src/core/: SpriteSheetTest.cpp  TileMapTest.cpp
